--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,17 @@
-title: Minimal theme
+title: <p align="center">Gopi Krishna </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
+  <a href="https://github.com/sgk259">GitHub</a>
+  
+  <br>   
+  I'm working on Big Data, Spark, Machine learning & NLP related problems.
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
